# alpha-feature-tools

./: pyproject.toml
alpha_feature_tools/: __init__.py  _base.py  _utils.py
alpha_feature_tools/derivation/: __init__.py  _base.py  _binary_cross_combination.py  _cross_combination.py  _four_arithmetic.py  _group_statistics.py  _n_polynomial.py  _nlp.py  _time.py
alpha_feature_tools/preprocess/: __init__.py  _binner.py  _encoder.py  _missing_value_processor.py  _outlier_processor.py  _scaler.py
alpha_feature_tools/selection/: __init__.py  _anova_f_selector.py  _chi_square_selector.py  _mutual_info_selector.py  _rfe.py  _select_from_model.py  _sequential_feature_selector.py
alpha_feature_tools/utils/: __init__.py  feature_util.py  model_util.py  os_util.py  secret_util.py
doc/derivation/: BinaryCrossCombination_CN.md  CrossCombination_CN.md  FourArithmetic_CN.md  GroupStatistics_CN.md  NLP_CN.md  NPolynomial_CN.md  Time_CN.md
doc/preprocess/: FeatureBinner_CN.md  MinMaxScaler_CN.md  MissingValueProcessor_CN.md  Normalizer_CN.md  OneHotEncoder_CN.md  OrdinalEncoder_CN.md  OutlierProcessor_CN.md  StandardScaler_CN.md
doc/selection/: ANOVAFSelector_CN.md  ChiSquareSelector_CN.md  MutualInfoSelector_CN.md  RFECV_CN.md  RFE_CN.md  SelectFromModel.md  SequentialFeatureSelector_CN.md
tests/: _test_binary_cross_combination.py
tests/derivation/: _base.py  _test_cross_combination.py  _test_four_arithmetic.py  _test_group_statistics.py  _test_n_polynomial.py  _test_nlp.py  _test_time.py
tests/preprocess/: _test_binner.py  _test_encoder.py  _test_normalizer.py  (+3 more)
(+8 files in other folders)
