[project]
name = "alpha-feature-tools"
version = "0.0.1"
description = "Feature Engineering Tools"
authors = [
    { name = "xiaotiancaipro", email = "xiaotiancaipro@163.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (==1.26.4)",
    "pandas (==1.3.5)",
    "scikit-learn (==1.1.3)",
    "matplotlib (==3.8.4)",
    "tqdm (==4.66.2)",
    "sklearn2pmml (==0.99.3)",
    "sklearn-pandas (==2.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
